# gitea-cli

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
src/: error.rs  macros.rs  main.rs
